<resources>
    <string name="app_name">Currency</string>
    <string name="currency_list">Currency list</string>
    <string name="cod">cod</string>
    <string name="currency_name">Currency name</string>
    <string name="currency_flag_image">currency flag image</string>
    <string name="currency_converter">Currency converter</string>
    <string name="currency_name_aed">United Arab Emirates dirham</string>
    <string name="currency_name_afn">Afghan afghani</string>
    <string name="currency_name_all">Albanian lek</string>
    <string name="currency_name_amd">Armenian dram</string>
    <string name="currency_name_ang">Netherlands Antillean guilder</string>
    <string name="currency_name_aoa">Angolan kwanza</string>
    <string name="currency_name_ars">Argentine peso</string>
    <string name="currency_name_aud">Australian dollar</string>
    <string name="currency_name_awg">Aruban florin</string>
    <string name="currency_name_azn">Azerbaijani manat</string>
    <string name="currency_name_bam">Bosnia and Herzegovina convertible mark</string>
    <string name="currency_name_bbd">Barbadian dollar</string>
    <string name="currency_name_bdt">Bangladeshi taka</string>
    <string name="currency_name_bgn">Bulgarian lev</string>
    <string name="currency_name_bhd">Bahraini dinar</string>
    <string name="currency_name_bif">Burundian franc</string>
    <string name="currency_name_bmd">Bermudian dollar</string>
    <string name="currency_name_bnd">Brunei dollar</string>
    <string name="currency_name_bob">Bolivian boliviano</string>
    <string name="currency_name_brl">Brazilian real</string>
    <string name="currency_name_bsd">Bahamian dollar</string>
    <string name="currency_name_btn">Bhutanese ngultrum</string>
    <string name="currency_name_bwp">Botswana pula</string>
    <string name="currency_name_byn">Belarusian ruble</string>
    <string name="currency_name_bzd">Belize dollar</string>
    <string name="currency_name_cad">Canadian dollar</string>
    <string name="currency_name_cdf">Congolese franc</string>
    <string name="currency_name_chf">Swiss franc</string>
    <string name="currency_name_clf">Chilean Unit of Account (UF)</string>
    <string name="currency_name_ckd">Cook Islands dollar</string>
    <string name="currency_name_clp">Chilean peso</string>
    <string name="currency_name_cny">Chinese yuan</string>
    <string name="currency_name_cop">Colombian peso</string>
    <string name="currency_name_crc">Costa Rican colón</string>
    <string name="currency_name_cuc">Cuban convertible peso</string>
    <string name="currency_name_cup">Cuban peso</string>
    <string name="currency_name_cve">Cape Verdean escudo</string>
    <string name="currency_name_czk">Czech koruna</string>
    <string name="currency_name_djf">Djiboutian franc</string>
    <string name="currency_name_dkk">krone</string>
    <string name="currency_name_dop">Dominican peso</string>
    <string name="currency_name_dzd">Algerian dinar</string>
    <string name="currency_name_egp">Egyptian pound</string>
    <string name="currency_name_ern">Eritrean nakfa</string>
    <string name="currency_name_etb">Ethiopian birr</string>
    <string name="currency_name_eur">Euro</string>
    <string name="currency_name_fjd">Fijian dollar</string>
    <string name="currency_name_fkp">Falkland Islands pound</string>
    <string name="currency_name_fok">Faroese króna</string>
    <string name="currency_name_gbp">British pound</string>
    <string name="currency_name_gel">Georgian lari</string>
    <string name="currency_name_ggp">Guernsey pound</string>
    <string name="currency_name_ghs">Ghanaian cedi</string>
    <string name="currency_name_gip">Gibraltar pound</string>
    <string name="currency_name_gmd">dalasi</string>
    <string name="currency_name_gnf">Guinean franc</string>
    <string name="currency_name_gtq">Guatemalan quetzal</string>
    <string name="currency_name_gyd">Guyanese dollar</string>
    <string name="currency_name_hkd">Hong Kong dollar</string>
    <string name="currency_name_hnl">Honduran lempira</string>
    <string name="currency_name_hrk">Croatian Kuna</string>
    <string name="currency_name_htg">Haitian gourde</string>
    <string name="currency_name_huf">Hungarian forint</string>
    <string name="currency_name_idr">Indonesian rupiah</string>
    <string name="currency_name_ils">Israeli new shekel</string>
    <string name="currency_name_imp">Manx pound</string>
    <string name="currency_name_inr">Indian rupee</string>
    <string name="currency_name_iqd">Iraqi dinar</string>
    <string name="currency_name_irr">Iranian rial</string>
    <string name="currency_name_isk">Icelandic króna</string>
    <string name="currency_name_jep">Jersey pound</string>
    <string name="currency_name_jmd">Jamaican dollar</string>
    <string name="currency_name_jod">Jordanian dinar</string>
    <string name="currency_name_jpy">Japanese yen</string>
    <string name="currency_name_kes">Kenyan shilling</string>
    <string name="currency_name_kid">Kiribati dollar</string>
    <string name="currency_name_kgs">Kyrgyzstani som</string>
    <string name="currency_name_khr">Cambodian riel</string>
    <string name="currency_name_kmf">Comorian franc</string>
    <string name="currency_name_kpw">North Korean won</string>
    <string name="currency_name_krw">South Korean won</string>
    <string name="currency_name_kwd">Kuwaiti dinar</string>
    <string name="currency_name_kyd">Cayman Islands dollar</string>
    <string name="currency_name_kzt">Kazakhstani tenge</string>
    <string name="currency_name_lak">Lao kip</string>
    <string name="currency_name_lbp">Lebanese pound</string>
    <string name="currency_name_lkr">Sri Lankan rupee</string>
    <string name="currency_name_lrd">Liberian dollar</string>
    <string name="currency_name_lsl">Lesotho loti</string>
    <string name="currency_name_lyd">Libyan dinar</string>
    <string name="currency_name_mad">Moroccan dirham</string>
    <string name="currency_name_mdl">Moldovan leu</string>
    <string name="currency_name_mga">Malagasy ariary</string>
    <string name="currency_name_mkd">denar</string>
    <string name="currency_name_mmk">Burmese kyat</string>
    <string name="currency_name_mnt">Mongolian tögrög</string>
    <string name="currency_name_mop">Macanese pataca</string>
    <string name="currency_name_mru">Mauritanian ouguiya</string>
    <string name="currency_name_mur">Mauritian rupee</string>
    <string name="currency_name_mvr">Maldivian rufiyaa</string>
    <string name="currency_name_mwk">Malawian kwacha</string>
    <string name="currency_name_mxn">Mexican peso</string>
    <string name="currency_name_myr">Malaysian ringgit</string>
    <string name="currency_name_mzn">Mozambican metical</string>
    <string name="currency_name_nad">Namibian dollar</string>
    <string name="currency_name_ngn">Nigerian naira</string>
    <string name="currency_name_nio">Nicaraguan córdoba</string>
    <string name="currency_name_nok">Norwegian krone</string>
    <string name="currency_name_npr">Nepalese rupee</string>
    <string name="currency_name_nzd">New Zealand dollar</string>
    <string name="currency_name_omr">Omani rial</string>
    <string name="currency_name_pab">Panamanian balboa</string>
    <string name="currency_name_pen">Peruvian sol</string>
    <string name="currency_name_pgk">Papua New Guinean kina</string>
    <string name="currency_name_php">Philippine peso</string>
    <string name="currency_name_pkr">Pakistani rupee</string>
    <string name="currency_name_pln">Polish złoty</string>
    <string name="currency_name_pyg">Paraguayan guaraní</string>
    <string name="currency_name_qar">Qatari riyal</string>
    <string name="currency_name_ron">Romanian leu</string>
    <string name="currency_name_rsd">Serbian dinar</string>
    <string name="currency_name_rub">Russian ruble</string>
    <string name="currency_name_rwf">Rwandan franc</string>
    <string name="currency_name_sar">Saudi riyal</string>
    <string name="currency_name_sbd">Solomon Islands dollar</string>
    <string name="currency_name_scr">Seychellois rupee</string>
    <string name="currency_name_sdg">Sudanese pound</string>
    <string name="currency_name_sek">Swedish krona</string>
    <string name="currency_name_sgd">Singapore dollar</string>
    <string name="currency_name_shp">Saint Helena pound</string>
    <string name="currency_name_sll">Sierra Leonean leone</string>
    <string name="currency_name_sos">Somali shilling</string>
    <string name="currency_name_srd">Surinamese dollar</string>
    <string name="currency_name_ssp">South Sudanese pound</string>
    <string name="currency_name_stn">São Tomé and Príncipe dobra</string>
    <string name="currency_name_svc">Salvadoran Colón</string>
    <string name="currency_name_syp">Syrian pound</string>
    <string name="currency_name_szl">Swazi lilangeni</string>
    <string name="currency_name_thb">Thai baht</string>
    <string name="currency_name_tjs">Tajikistani somoni</string>
    <string name="currency_name_tmt">Turkmenistan manat</string>
    <string name="currency_name_tnd">Tunisian dinar</string>
    <string name="currency_name_top">Tongan paʻanga</string>
    <string name="currency_name_try">Turkish lira</string>
    <string name="currency_name_ttd">Trinidad and Tobago dollar</string>
    <string name="currency_name_tvd">Tuvaluan dollar</string>
    <string name="currency_name_twd">New Taiwan dollar</string>
    <string name="currency_name_tzs">Tanzanian shilling</string>
    <string name="currency_name_uah">Ukrainian hryvnia</string>
    <string name="currency_name_ugx">Ugandan shilling</string>
    <string name="currency_name_usd">United States dollar</string>
    <string name="currency_name_uyu">Uruguayan peso</string>
    <string name="currency_name_uzs">Uzbekistani soʻm</string>
    <string name="currency_name_vef">Venezuelan Bolívar</string>
    <string name="currency_name_ves">Venezuelan bolívar soberano</string>
    <string name="currency_name_vnd">Vietnamese đồng</string>
    <string name="currency_name_vuv">Vanuatu vatu</string>
    <string name="currency_name_wst">Samoan tālā</string>
    <string name="currency_name_xaf">Central African CFA franc</string>
    <string name="currency_name_xcd">Eastern Caribbean dollar</string>
    <string name="currency_name_xof">West African CFA franc</string>
    <string name="currency_name_xpf">CFP franc</string>
    <string name="currency_name_yer">Yemeni rial</string>
    <string name="currency_name_zar">South African rand</string>
    <string name="currency_name_zmw">Zambian kwacha</string>
    <string name="currency_name_zwl">Zimbabwean dollar</string>
    <string name="USD">USD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>