<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/currency_item"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/currency_flag"
        android:layout_width="55dp"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical|start"
        android:gravity="center"
        android:textSize="35sp"
        android:contentDescription="@string/currency_flag_image">
    </ImageView>

    <TextView
        android:id="@+id/currency_name"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:paddingStart="10dp"
        android:paddingTop="9dp"
        android:singleLine="true"
        android:text="@string/currency_name_usd"
        android:textSize="24sp" />
    <TextView
        android:layout_width="10dp"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/currency_cod"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical|end"
        android:text="@string/USD"
        android:textSize="20sp"
        android:paddingTop="12dp">

    </TextView>
</LinearLayout>