<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/currency_view"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/currency_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_list"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <SearchView
        android:id="@+id/currency_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:background="@color/cardview_shadow_start_color"
        app:layout_constraintTop_toBottomOf="@id/currency_list"
        android:layout_marginTop="10dp">

    </SearchView>

    <GridLayout
        android:id="@+id/currency_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/currency_search"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/currency_item"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@+id/currency_list"
            android:layout_marginTop="10dp"
            android:scrollbarAlwaysDrawVerticalTrack="true">


            <TextView
                android:id="@+id/currency_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/currency_name"
                android:textSize="24sp">

            </TextView>

            <ImageView
                android:id="@+id/currency_flag"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:background="@color/cardview_shadow_start_color"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/currency_flag_image">
            </ImageView>

            <TextView
                android:id="@+id/currency_cod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:layout_marginEnd="5dp"
                android:text="@string/cod">

            </TextView>
        </FrameLayout>
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
